1.	Mobile Header Shadow Removed 2.	Dependent Count Label vertically center aligned 3.	Protection Need Banner Image Updated 4.	Edit Profile Header Issue Fixed 5.	Date picker Icon position adjusted 6.	Button text vertically aligned issue fixed 7.	Description Bold Text Modified with correct font 8.	Hospital Plan Title Two Line Issue Resolved 9.	BFA-667 comments from Germaine fixed 10.	Mobile Close Button Position Changed as part of BFA-667 11.	Profile Desktop Help Modal Close Button Issue 12.	Input Edit Mode Color Changed

--- a/src/_all.scss
+++ b/src/_all.scss
@@ -147,6 +147,9 @@ body {
             overflow:hidden;
             }
           }
+          @include allmobiles {
+            box-shadow: none;
+          }
         button{
           outline:none;
           }
@@ -897,6 +900,7 @@ body {
     top: 30px !important;
     z-index: 9;
     //opacity: 1 !important;
+    right: 15px !important;
   }
 }
 
