--- a/src/_form-control.scss
+++ b/src/_form-control.scss
@@ -243,8 +243,9 @@
     .input-label-white {
       color: #ffffff;
       font-family: $muli-semi-bold;
-      font-size: 22px;
+      font-size: 20px;
       line-height: 1.3;
+      margin-bottom: 6px;
 
       @include allmobiles {
         margin-bottom: 20px;
@@ -377,6 +378,10 @@ input::placeholder {
   .btn-primary {
     background: #fff3e9 !important;
   }
+  label, input{
+    color: $inline-error-border-color !important;
+  }
+
 }
 
 .form__col--mid {
@@ -426,6 +431,7 @@ input::placeholder {
     height: auto;
     cursor: pointer;
     margin-bottom: 1px;
+    margin-top: -4px;
   }
 }
 
