--- a/src/_modal.scss
+++ b/src/_modal.scss
@@ -188,7 +188,7 @@
 /* Direct Journey -- Product Info*/
 .modal--freeze {
   height: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .prod-info {
